Correccion de otrografia

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     </div>
                     <div>
                         <button type="submit" id="calculate-calories">
-                            Calculate Remaining Calories
+                            Calcular calorías totales
                         </button>
-                        <button type="button" id="clear">Clear</button>
+                        <button type="button" id="clear">Limpiar</button>
                     </div>
                 </form>
                 <div id="output" class="output hide"></div>
